kubernetes/apps/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: seerr
spec:
  selector:
    app.kubernetes.io/name: seerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
